--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
   <div class="row">
     <div class="columns">
-      <p class="thumbnail_align"> <img src="../Pictures/普通/米兰婚纱摄影-2时尚菇娘 (1).jpg"alt="" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <img src="https://github.com/xiaoxiong34/xiaoxiong34.github.io/blob/main/%E7%B1%B3%E5%85%B0%E5%A9%9A%E7%BA%B1%E6%91%84%E5%BD%B1-2%E6%97%B6%E5%B0%9A%E8%8F%87%E5%A8%98%20(1).jpg"alt="" class="thumbnail"/> </p>
       <h4>经典语录&nbsp;</h4>
       <p align="center">万事皆有可能</p>
     </div>
