--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<！doctype html>
+<.html>
+<头>
+<元字符集=“utf-8">
+<标题>sy1_6</标题>
+</头>
+
+<身体>
+	<h2align=“center”>视频分享</h2>
+<视频宽度=“400”高度=“250”控件=“控件" >
+      <sourcesrc=“抖音视频.mp4”type=“video/mp4">
+</视频>
+</身体>
+</.html>
