--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<h2 align="center">视频分享</h2>
-<video width="400" height="250" controls="controls" >
+<video width="400" height="250" controls="controls" align="center" >
       <source src="抖音视频.mp4" type="video/mp4">
 </video>
 </body>
