--- a/sy2-4html.html
+++ b/sy2-4html.html
@@ -39,6 +39,45 @@
 				<td width="100" height="20" align="left">电子邮件</td>
 				<td width="400" height="20" align="left"><input type="text" name="date" id="date" size="30"/></td>
 			</tr>
+			<tr>
+				<td width="100" height="20" align="left">最高学历</td>
+				<td width="400" height="20" align="left">
+					<input type="radio" name="grade" value="中专"/>中专
+					<input type="radio" name="grade" value="大专"/>大专
+					<input type="radio" name="grade" value="大学"/>大学
+				</td>
+			</tr>
+			<tr>
+				<td width="100" height="20" align="left">职业</td>
+				<td width="400" height="20" align="left">
+					<select name="work">
+						<option value="学生">学生</option>
+						<option value="教师" selected>教师</option>
+						<option value="医生">医生</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td width="100" height="20" align="left">爱好</td>
+				<td width="400" height="20" align="left">
+					<input type="checkbox" name="like" value="上网"/>上网
+					<input type="checkbox" name="like" value="篮球"/>篮球
+					<input type="checkbox" name="like" value="听歌"/>听歌
+					<input type="checkbox" name="like" value="下棋"/>下棋
+				</td>
+			</tr>
+			<tr>
+				<td width="100" height="20" align="left">留言</td>
+				<td width="400" height="20" align="left">
+					<textarea name="talk" cols="50" rows="5">请输入您的留言信息...</textarea>
+				</td>
+			</tr>
+			<tr>
+				<td height="20" colspan="2">
+					<input type="submit" name="Submit1" value="提交"/>
+					<input type="submit" name="Submit2" value="重写"/>
+				</td>
+			</tr>
 		</table>
 	</form>
 	
