--- a/blog.html
+++ b/blog.html
@@ -27,25 +27,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
 	
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap.css">
 	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="owl.carousel.min.css">
+	<link rel="stylesheet" href="owl.theme.default.min.css">
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="magnific-popup.css">
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 
 
 	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
+	<script src="modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
+	<script src="respond.min.js"></script>
 	<![endif]-->
 
 	</head>
@@ -78,16 +78,16 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">extract</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+						<a href="work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+						<a href="work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(work-2.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+						<a href="work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(work-3.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+						<a href="work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(work-4.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 					</div>
@@ -131,7 +131,7 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-1.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -146,7 +146,7 @@
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-4.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-4.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -161,7 +161,7 @@
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-7.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-7.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -179,7 +179,7 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-2.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -194,7 +194,7 @@
 						
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-5.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-5.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -209,7 +209,7 @@
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-8.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-8.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -227,7 +227,7 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-3.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -242,7 +242,7 @@
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-6.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-6.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -257,7 +257,7 @@
 
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-9.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="img-9.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
@@ -297,21 +297,21 @@
 						<div class="col-md-4 col-pb-sm">
 							<h2>个人信息&nbsp;</h2>
 							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
+								<a href="#" class="featured-img" style="background-image: url(img-1.jpg);"></a>
 								<div class="desc">
 									<span>姓名：</span>
 									<h3><a href="#">熊亚玲</a></h3>
 								</div>
 							</div>
 							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
+								<a href="#" class="featured-img" style="background-image: url(img-2.jpg);"></a>
 								<div class="desc">
 									<span>出生年月</span>
 									<h3><a href="#">2002.10.07</a></h3>
 								</div>
 							</div>
 							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
+								<a href="#" class="featured-img" style="background-image: url(img-3.jpg);"></a>
 								<div class="desc">
 									<span>qq号码</span>
 									<h3><a href="#">2470676318</a></h3>
@@ -345,21 +345,21 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</div>
 
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="jquery.waypoints.min.js"></script>
 	<!-- Owl Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
+	<script src="owl.carousel.min.js"></script>
 	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
+	<script src="jquery.magnific-popup.min.js"></script>
+	<script src="magnific-popup-options.js"></script>
 
 	<!-- Main JS (Do not remove) -->
-	<script src="js/main.js"></script>
+	<script src="main.js"></script>
 
 	</body>
 </html>
