--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>熊亚玲的主页</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -67,9 +67,9 @@
 					<div class="col-md-12">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li class="active"><a href="services.html">Introduce</a></li>
+							<li><a href="work.html">extract</a></li>
+							<li><a href="blog.html">photo</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
