--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 							<li><a href="blog.html">photo</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="实验.html">experiment</a></li>
 						</ul>
 					</div>
 				</div>
