--- a/sy1_2.html
+++ b/sy1_2.html
@@ -7,9 +7,8 @@
 
 <body>
 	<h1 align="center">音乐欣赏</h1>
- <p align="center"><img src="../Pictures/R-C.jfif" alt="音乐鉴赏"title="音乐鉴赏"/></p>
-
-  <embed src="阿鲁阿卓 - 美丽中国.mp3" width="32" height="32"/>
+	<p align="center"><img src="arrow_off.gif" alt="音乐鉴赏"title="音乐鉴赏"/></p>
+	<embed src="阿鲁阿卓 - 美丽中国.mp3" width="32" height="32"/>
 
 </body>
 </html>
