--- a/sy2_3.html
+++ b/sy2_3.html
@@ -11,10 +11,10 @@
 			<th align="left" bgcolor="#7FD000" width="600" colspan="4"><font color="#FFFFFF">推 荐 菜 谱</font></th>
 		</tr>
 		<tr>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\炒菜心.png" width="150"></td>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\黄豆烧海带.png" width="150"></td>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\凉皮拌黄瓜.png" width="150"></td>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\麻辣面筋.png" width="150"></td>	
+			<td align="center" width="150"><img src="炒菜心.png" width="150"></td>
+			<td align="center" width="150"><img src="黄豆烧海带.png" width="150"></td>
+			<td align="center" width="150"><img src="凉皮拌黄瓜.png" width="150"></td>
+			<td align="center" width="150"><img src="麻辣面筋.png" width="150"></td>	
 		</tr>
 		<tr>
 			<td width="150" align="center">炒菜心</td>
@@ -23,10 +23,10 @@
 			<td width="150" align="center">麻辣面筋</td>
 		</tr>
 		<tr>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\青蒜萝卜.png" width="150"></td>
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\清炒芦笋.png" width="150"></td>	
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\烧卖.png" width="150"></td>	
-			<td align="center" width="150"><img src="D:\熊亚玲\网页设计\图片\中式辣煎羊排.png" width="150"></td>	
+			<td align="center" width="150"><img src="青蒜萝卜.png" width="150"></td>
+			<td align="center" width="150"><img src="清炒芦笋.png" width="150"></td>	
+			<td align="center" width="150"><img src="烧卖.png" width="150"></td>	
+			<td align="center" width="150"><img src="中式辣煎羊排.png" width="150"></td>	
 		</tr>
 	  <tr>
 			<td width="150" align="center">青蒜萝卜</td>
