--- a/sy3_6.html
+++ b/sy3_6.html
@@ -71,14 +71,14 @@ ul li a:hover span em {
 
 <body>
 	<ul>
-  <li><a href="#"><img src="images3/01.jpg" width="200" height="150"/><strong>田园风光<br>世外桃源的生活</strong> <span>会员价：&yen;<em>3333</em></span></a></li>
-  <li><a href="#"><img src="images3/02.jpg" width="200" height="150"/><strong>海天一色<br>心旷神怡的景观</strong> <span>会员价：&yen;<em>3680</em></span></a></li>
-  <li><a href="#"><img src="images3/03.jpg" width="200" height="150"/><strong>北欧风情<br>流连忘返的邂逅</strong> <span>会员价：&yen;<em>6600</em></span></a></li>
-  <li><a href="#"><img src="images3/04.jpg" width="200" height="150"/><strong>南极风采<br>没有烦恼的世界</strong> <span>会员价：&yen;<em>9999</em></span></a></li>
-  <li><a href="#"><img src="images3/01.jpg" width="200" height="150"/><strong>田园风光<br>世外桃源的生活</strong> <span>会员价：&yen;<em>3333</em></span></a></li>
-  <li><a href="#"><img src="images3/02.jpg" width="200" height="150"/><strong>海天一色<br>心旷神怡的景观</strong> <span>会员价：&yen;<em>3680</em></span></a></li>
-  <li><a href="#"><img src="images3/03.jpg" width="200" height="150"/><strong>北欧风情<br>流连忘返的邂逅</strong> <span>会员价：&yen;<em>6600</em></span></a></li>
-  <li><a href="#"><img src="images3/04.jpg" width="200" height="150"/><strong>南极风采<br>没有烦恼的世界</strong> <span>会员价：&yen;<em>9999</em></span></a></li>
+  <li><a href="#"><img src="01.jpg" width="200" height="150"/><strong>田园风光<br>世外桃源的生活</strong> <span>会员价：&yen;<em>3333</em></span></a></li>
+  <li><a href="#"><img src="02.jpg" width="200" height="150"/><strong>海天一色<br>心旷神怡的景观</strong> <span>会员价：&yen;<em>3680</em></span></a></li>
+  <li><a href="#"><img src="03.jpg" width="200" height="150"/><strong>北欧风情<br>流连忘返的邂逅</strong> <span>会员价：&yen;<em>6600</em></span></a></li>
+  <li><a href="#"><img src="04.jpg" width="200" height="150"/><strong>南极风采<br>没有烦恼的世界</strong> <span>会员价：&yen;<em>9999</em></span></a></li>
+  <li><a href="#"><img src="01.jpg" width="200" height="150"/><strong>田园风光<br>世外桃源的生活</strong> <span>会员价：&yen;<em>3333</em></span></a></li>
+  <li><a href="#"><img src="02.jpg" width="200" height="150"/><strong>海天一色<br>心旷神怡的景观</strong> <span>会员价：&yen;<em>3680</em></span></a></li>
+  <li><a href="#"><img src="03.jpg" width="200" height="150"/><strong>北欧风情<br>流连忘返的邂逅</strong> <span>会员价：&yen;<em>6600</em></span></a></li>
+  <li><a href="#"><img src="04.jpg" width="200" height="150"/><strong>南极风采<br>没有烦恼的世界</strong> <span>会员价：&yen;<em>9999</em></span></a></li>
 </ul>
 </body>
 </html>
