--- a/sy4-2.html
+++ b/sy4-2.html
@@ -17,12 +17,12 @@
 		  <span>&yen;386</span>
         </div>
 		<div class="scroll">
-            <a href="#"><img src="图片/pic1.jpg" alt="" width="62" height="62" /></a>
-            <a href="#"><img src="图片/pic2.jpg" alt="" width="62" height="62" /></a>
-            <a href="#"><img src="图片/pic3.jpg" alt="" width="62" height="62" /></a>
-            <a href="#"><img src="图片/pic4.jpg" alt="" width="62" height="62" /></a>
-            <a href="#"><img src="图片/pic5.jpg" alt="" width="62" height="62" /></a>
-            <a href="#"><img src="图片/pic6.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic1.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic2.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic3.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic4.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic5.jpg" alt="" width="62" height="62" /></a>
+            <a href="#"><img src="pic6.jpg" alt="" width="62" height="62" /></a>
 		</div>
 	  </div>
 	  <div class="description">
