--- a/sy4-2.html
+++ b/sy4-2.html
@@ -13,7 +13,7 @@
 	  <div id="item">
 	    <h4>休闲办公椅</h4><br />
 		<div class="big_view">
-		  <img src="图片/photo.jpg" alt="" width="311" height="319" /><br />
+		  <img src="photo.jpg" alt="" width="311" height="319" /><br />
 		  <span>&yen;386</span>
         </div>
 		<div class="scroll">
