--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Introduce</a></li>
-							<li><a href="work.html">extract</a></li>
-							<li><a href="blog.html">photo</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="实验.html">experiment</a></li>
+							<li class="active"><a href="index.html">主页</a></li>
+							<li><a href="services.html">电影介绍</a></li>
+							<li><a href="work.html">摘抄</a></li>
+							<li><a href="blog.html">我的生活</a></li>
+							<li><a href="about.html">关于我</a></li>
+							<li><a href="contact.html">联系方式</a></li>
+							<li><a href="实验.html">实验</a></li>
 						</ul>
 					</div>
 				</div>
@@ -478,6 +478,8 @@
 								<div class="desc">
 									<span>qq号码</span>
 									<h3><a href="#">2470676318</a></h3>
+									<span>实验链接<span>
+									<h3><a href="实验.html" ><a href="#">实验</a></a></h3>
 								</div>
 							</div>
 						</div>
