--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 									<span>qq号码</span>
 									<h3><a href="#">2470676318</a></h3>
 									<span>实验链接<span>
-									<h3><a href="实验.html" ><a href="#">实验</a></a></h3>
+									<h3><a href="实验.html" >实验</a></h3>
 								</div>
 							</div>
 						</div>
