--- a/blog.html
+++ b/blog.html
@@ -66,12 +66,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="services.html">Introduce</a></li>
-							<li><a href="work.html">extract</a></li>
-							<li class="active"><a href="blog.html">photo</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="index.html">主页</a></li>
+							<li><a href="services.html">电影介绍</a></li>
+							<li><a href="work.html">摘抄</a></li>
+							<li class="active"><a href="blog.html">我的生活</a></li>
+							<li><a href="about.html">关于我</a></li>
+							<li><a href="contact.html">联系方式</a></li>
+							<li><a href="实验.html">实验</a></li>
 						</ul>
 					</div>
 				</div>
